crowdsec/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-db
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crowdsec-db
  template:
    metadata:
      labels:
        app: crowdsec-db
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: crowdsec-db
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: crowdsec-nfs-volume
              subPath: db
      volumes:
        - name: crowdsec-nfs-volume
          persistentVolumeClaim:
            claimName: crowdsec-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-db
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: crowdsec-db
